--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-rc.0",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.4.1"
   }
 }
