--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-rc.0",
